 *  Authors now receive ETD system emails addressed to them by their full name
 * An author now receives feedback about errors when entering contact information. This feature no longer users XForms.
 * The datastreams portion of the ETD model have been refactored so that the datastream files are in a sub-directory.
 * Refactored code to change User class to AuthorInfo class.

Deployment notes:
 * main config.xml has new  sections for for news_feed and doc_feed
 * persis.xml test section has changed
 * svn external version update to 211 for lib/Emory.
 * Run following migrations:
   014-remove_duplicate_collection_membership.php


Version 1.6.3 - April 2010 (bugfix)

 * Emory authors from the College and Candler School of Theology can
 * download updated Submission Agreement Forms from the ETD website.

Version 1.6.2 - March 2010 (bugfix)
 * Authors with dual roles such as student/staff will be able to create an ETD based
 on their school affiliation.


Version 1.6.1 - March 2010 (bugfix)

* Authors may embargo all or part of the ETD record and still be able
  to pass validations on submission review page.

Version 1.6 - March 2010

* Added support for receiving and managing submissions from Candler
  School of Theology.  Per-school configuration is now handled largely
  through the schools.xml config file; for more details, see
  Documentation/MultiSchoolConfiguration.txt.
* Several enhancements & changes to the submission process:
  * Pre-submission screening questions to identify possible copyright
    and patent issues.
  * Program selection interface changed; only the portion relevant to
    the student's school is available.
  * Additional checks when adding files to a submission:
    - duplicate files will be rejected (based on checksum)
    - PDF is not allowed for original document
* New "Report Viewer" role with access to ETD reports and statistics.
* New admin feature to revise embargo end dates.